--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
 
       <!-- <style>        #myDiv {height: 300px;width: 768px;background: url('BForce/business.jpg');background-size: 400px 200px;background-repeat: no-repeat;        }    </style> -->
 
-    <section id="hero" style="background-image: url('BForce/business.jpg');background-attachment: scroll;background-size:cover;background-repeat: no-repeat;margin-top: -210px;">
+    <section id="hero" style="background-image: url('./business.jpg');background-attachment: scroll;background-size:cover;background-repeat: no-repeat;margin-top: -210px;">
         <div class="hero-container aos-init aos-animate" data-aos="fade-up" data-aos-delay="150">    
           <h2>
             <p style="margin-top: 300px;font-family: Open Sans
