--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
         </div>
                     <div class="col-lg-2 col-md-2 d-flex align-items-stretch"  style="opacity: 1;">
             <div class="card">
-            <img src="BForce/web-development.png" class="img-fluid imagess" width="70" alt="..." />
+            <img src="./web-development.png" class="img-fluid imagess" width="70" alt="..." />
             <div class="card-body mt-4">
               <h6 class="card-title">Salesforce Development</h6>
           </div>
@@ -346,7 +346,7 @@
         </div>
                     <div class="col-lg-2 col-md-2 d-flex align-items-stretch"  style="opacity: 1;">
             <div class="card">
-            <img src="BForce/integration.png" class="img-fluid imagess" width="70" alt="..." />
+            <img src="/integration.png" class="img-fluid imagess" width="70" alt="..." />
             <div class="card-body mt-4">
               <h6 class="card-title">Salesforce Intergration</h6>
           </div>
@@ -354,7 +354,7 @@
         </div>
                     <div class="col-lg-2 col-md-2 d-flex align-items-stretch"  style="opacity: 1;">
             <div class="card">
-            <img src="BForce/migration.png" class="img-fluid imagess" width="70" alt="..." />
+            <img src="migration.png" class="img-fluid imagess" width="70" alt="..." />
             <div class="card-body mt-4">
               <h6 class="card-title">Salesforce Migration</h6>
           </div>
